# rules_godot

./: BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  defs.bzl  godot-cpp-4.4.BUILD  godot-cpp-4.5.BUILD  godot.BUILD  repository.bzl
godot/: BUILD.bazel  extensions.bzl
godot/private/: BUILD.cpp.bazel  BUILD.godot.bazel  common.bzl  cpp.bzl  defs.godot.bzl  extensions.bzl  godot.bzl  godot_binary.bzl  remote.bzl
test/plugins/: BUILD.bazel  gdexample.cpp  gdexample.h  register_types.cpp
test/test-binary/: BUILD.bazel  icon.svg.import  project.godot  scene.tscn
test/test-plugin/: BUILD.bazel  icon.svg.import  project.godot  scene.tscn
