module(name = "rules_godot", compatibility_level = 0)

bazel_dep(name = "rules_pkg", version = "1.2.0")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "bazel_lib", version = "3.2.2")
bazel_dep(name = "bazel_features", version = "1.36.0", repo_name = "com_github_rules_godot_bazel_features")

godot = use_extension("//godot:extensions.bzl", "godot")

godot.download(
    name = "godot4.4",
    repo_name = "",
    version = "4.4",
)
godot.cpp(
    name = "godot-cpp4.4",
    version = "4.4",
)

use_repo(godot, "godot4.4", "godot-cpp4.4")
