load("@rules_cc//cc:cc_library.bzl", "cc_library")

cc_library(
    name = "godot-cpp",
    srcs = glob([
        "src/*.cpp",
        "src/classes/*.cpp",
        "src/core/*.cpp",
        "src/variant/*.cpp",
        "gen/src/classes/*.cpp",
        "gen/src/variant/*.cpp",
    ], allow_empty=True),
    hdrs = glob([
        "include/**/*.hpp",
        "include/**/*.inc",
        "gen/include/**/*.hpp",
        "gdextension/**/*.h",
    ], allow_empty=True),
    includes = [
        "gdextension",
        "gen/include",
        "include",
    ],
    linkstatic = True,
    visibility = ["//visibility:public"],
)
