load("@rules_cc//cc:cc_binary.bzl", "cc_binary")

cc_binary(
    name = "test-plugin.so",
    srcs = [
        "gdexample.cpp",
        "gdexample.h",
        "register_types.cpp",
        "register_types.h",
    ],
    linkshared = True,
    visibility = ["//visibility:public"],
    deps = [
        "@godot-cpp4.4//:godot-cpp",
    ],
)
